<resources>
    <string name="colorPrimary">#4fc3f7</string>
    <string name="colorPrimaryDark">#0093c4</string>
    <string name="colorPrimaryLight">#8bf6ff</string>

    <string name="colorSecondary">#fff176</string>

    <string name="colorSecondaryDark">#cabf45</string>

    <string name="colorSecondaryLight">#ffffa8</string>

    <string name="colorActiveControl">#36d696</string>
    <string name="primary_text">#e1f5fe</string>
    <string name="secondary_text">#f1f8e9</string>
    <string name="icons">#FFFFFF</string>
    <string name="divider">#BDBDBD</string>
    <string name="white">#ffffff</string>
    <string name="whiteBack">#fafeff</string>
    <string name="black">#212121</string>
    <string name="blue_link">#3385ff</string>
    <string name="grey_disable">#a0a0a0</string>
    <string name="grey_light_background">#cccccc</string>
    <string name="transparent">#00000000</string>


    <string name="gray">#ebebeb</string>
    <string name="gray_light">#e8e8e8</string>
    <string name="gray_transparent">#a6efefef</string>
    <string name="gray_dark_transparent">#ae858585</string>
    <string name="ivory">#f8efe6</string>
    <string name="ivory_dark">#f7e8d9</string>
    <string name="green">#38be55</string>
    <string name="green_dark">#2da346</string>
    <string name="red">#e94f4f</string>
    <string name="orange">#ffd54f</string>


    <string-array name="colorChangeArray">
        <item>#e8e8e8</item>
        <item>#eaff4f</item>
        <item>#ffe84f</item>
        <item>#ffbc4f</item>
        <item>#ff954f</item>
        <item>#ff7e4f</item>
        <item>#ff644f</item>
        <item>#ff484f</item>

    </string-array>


    <string name="app_name">S-Cloud</string>
    <string name="cant_internet">Cannot Connect to Internet</string>
    <string name="error_check_internet">Error checking internet connection</string>
    <string name="OK">ok</string>
    <string name="not_connect_internet">No network available</string>
    <string name="title_activity_stateful">StatefulActivity</string>
    <string name="close">Close</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="google_sign_up">Sign up with Google </string>
    <string name="dbx_sign_up">Sign up with Dropbox</string>
    <string name="tap_here">Tap here</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or">or</string>
    <string name="search">Search</string>
    <string name="viewmode">View Mode</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="testname">Le Thi Truong Giang</string>
    <string name="fail_login">Fail to login</string>
    <string name="exit_app_tit">Exit Application</string>
    <string name="ext_app_mess">Do you want to stop application here?</string>
    <string name="no">NO</string>
    <string name="file_menu">File Menu</string>
    <string name="upload">Transfer to…</string>
    <string name="sync_with">Sync with…</string>
    <string name="save_to_local_storage">Save to local storage</string>
    <string name="g_drive">Google Drive</string>
    <string name="dbox">Dropbox</string>
    <string name="local_storage">Local Storage</string>
    <string name="which_drive">Which Drive?</string>
    <string name="wtdn">What to do now?</string>
    <string name="list_mode">List mode</string>
    <string name="grid_mode">Grid mode</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="dbox_app_key">oel3wpyf1o67v0d</string>
    <string name="checking_login">Checking Account Validation</string>
    <string name="add_file_to_drive">Add a file to this drive</string>
    <string name="create_new_folder">Create new folder here</string>
    <string name="example">Sample text</string>
    <string name="not_connected">Not connected</string>
    <string name="fix_it">Fix it</string>
    <string name="connect">Connect</string>
    <string name="not_connected_dropbox">You have not connected to Dropbox</string>
    <string name="not_connected_to">You have not connected to</string>
    <string name="folder_name">Folder name</string>
    <string name="cancel">Cancel</string>
    <string name="new_folder">New Folder</string>
    <string name="delete">Delete</string>
    <string name="open_with">Open with...</string>
    <string name="get_info">Get info</string>
    <string name="finish_downfile">Finish downloading file</string>
    <string name="finish_upfile">Finish uploading file</string>
    <string name="unsuccessfully">unsuccessfully</string>
    <string name="successfully">successfully</string>
    <string name="create_folder">Create Folder</string>
    <string name="transfer_file">Transfer File</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="cannot_accesS_file">Cannot access this file</string>
    <string name="select_file_toup">Select a File to Upload</string>
    <string name="please_setup_file_manager">Please install a File Manager.</string>
    <string name="transfering_tasks">Transfering Tasks</string>
    <string name="authenticator">Authenticator</string>
    <string name="your_google_drive">Your Google Drive</string>
    <string name="your_local_storage">Your Local Storage</string>
    <string name="your_dropbox">Your Dropbox</string>
    <string name="sign_out">Sign out</string>
    <string name="rating">Rating</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About us</string>
    <string name="nothing_toshow">There is nothing to show</string>
    <string name="please_access_to_this_address_on_a_web_browser">Access this address via a web browser</string>
    <string name="import_from_pc">Import from PC</string>
    <string name="sdcardnotmount">SD Card is not mounted</string>
    <string name="title_activity_register">Register</string>
    <string name="check_internet">Check your internet connection</string>
    <string name="job">Job</string>
    <string name="birthday">Birthday</string>
    <string name="where_you_live">Where you live ?</string>
    <string name="country">Country</string>
    <string name="when_was_you_born">When was you born?</string>
    <string name="what_you_do">What do you do?</string>
    <string name="what_yourname">What\'s your name?</string>
    <string name="email_to_contact">Your email to contact?</string>
    <string name="what_s_your_password">What\'s your password?</string>
    <string name="get_otp">Get Otp Code</string>
    <string name="signing_up">Signing up…</string>
    <string name="signin_ing">Signing in…</string>
    <string name="se_date">Select date</string>
    <string name="more6">Password has to be more than 6 characters</string>
    <string name="confirm_wrong">Confirm wrongly!!!</string>
    <string name="got_info_then_set_pass">We have got your information via one of your drive service account. Please set the password you will use to sign in our service</string>
    <string name="file_name">Name</string>
    <string name="size">Size</string>
    <string name="last_modified_date">Last Modified Date</string>
    <string name="file_type">Type</string>
    <string name="unknown">Unknown</string>
    <string name="unavail">Unavailable</string>
    <string name="del_a_file">Delete a file</string>
    <string name="ausure">Are you sure to delete this file?</string>
    <string name="register_dot">Register...</string>
    <string name="no_file_handler">No handler for this type of file.</string>
    <string name="file_info">File Info</string>
    <string name="canceling">Cancelling...</string>
    <string name="checkpass">Check password and confirm password correctly</string>
    <string name="wrongemail">Wrong email input!</string>
    <string name="reg_succ_confirm">Register Successfully, please confirm the account via your email!</string>
    <string name="getgoogleinfo">Getting Google Info...</string>
    <string name="getdbxinfo">Getting Dropbox Info...</string>
    <string name="signupfail">Sign up failed</string>
    <string name="plsusewifi">Please use wifi at the first time</string>
    <string name="firsttobetheroot">First device will be a root</string>
    <string name="checkauth">Check authorization...</string>
    <string name="otpcode">OTP Code</string>
    <string name="type_the_otp_got_from_the_root_device">Type the OTP got from the root device</string>
    <string name="device_auth">Device Authorization</string>
    <string name="failt">Fail</string>
    <string name="wrongformatotp">Wrong format of OTP</string>
    <string name="cannotsecupack">Cannot create Security package</string>
    <string name="unknerr">Unknown error</string>
    <string name="faillougout">Fail to log out</string>
    <string name="homeactivity">Fetching OTP...</string>
    <string name="not_root">Your device is not the root one!</string>
    <string name="updateprofilesucc">Update profile successfully</string>
    <string name="updating">Updating...</string>
    <string name="nomailclients">There are no email clients installed.</string>
    <string name="sendmail">Send mail...</string>
    <string name="abtus">About us</string>
</resources>