<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:background="@color/whiteBack"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/layoutDriveActions"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_16"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="Drive Services"
                android:textSize="@dimen/textSize_14"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="@dimen/padding_3"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnConnectGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_gdrive"
                    android:text="@string/connect"
                    android:textColor="@color/kp_btn_txt_color_state"
                    android:theme="@style/KasperButton" />

                <Button
                    android:id="@+id/btnConnectDropbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_dbox"
                    android:text="@string/connect"
                    android:textColor="@color/kp_btn_txt_color_state"
                    android:theme="@style/KasperButton"

                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_16"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="@color/colorPrimary"
                android:text="@string/name"
                android:textSize="@dimen/textSize_14"
                android:textStyle="bold" />

            <EditText
                android:theme="@style/Theme.App.GrayText"
                android:id="@+id/edtProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_4"
                android:hint="@string/what_yourname"
                android:textColorHint="@color/gray_light"
                android:textColor="@color/gray"
                android:textSize="@dimen/textSize_18" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_16"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/textSize_14"
                android:textStyle="bold" />

            <EditText
                android:theme="@style/Theme.App.GrayText"
                android:id="@+id/edtProfileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_4"
                android:hint="@string/email_to_contact"
                android:textColorHint="@color/gray_light"
                android:textColor="@color/gray"
                android:textSize="@dimen/textSize_18" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_16"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:text="@string/job"
                android:textSize="@dimen/textSize_14"
                android:textStyle="bold" />

            <EditText
                android:theme="@style/Theme.App.GrayText"
                android:id="@+id/edtProfileJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_4"
                android:hint="@string/what_you_do"
                android:textColorHint="@color/gray_light"
                android:textColor="@color/gray"
                android:textSize="@dimen/textSize_18" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_16"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textSize="@dimen/textSize_14"
                android:textStyle="bold" />

            <EditText
                android:theme="@style/Theme.App.GrayText"
                android:id="@+id/edtProfileBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_4"
                android:hint="@string/when_was_you_born"
                android:textColorHint="@color/gray_light"
                android:textColor="@color/gray"
                android:textSize="@dimen/textSize_18" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_16"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="@dimen/textSize_14"
                android:textStyle="bold" />

            <EditText
                android:theme="@style/Theme.App.GrayText"
                android:id="@+id/edtProfileCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_4"
                android:hint="@string/where_you_live"
                android:textColorHint="@color/gray_light"
                android:textColor="@color/gray"
                android:textSize="@dimen/textSize_18" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_16"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/textSize_14"
                android:textStyle="bold" />

            <EditText
                android:theme="@style/Theme.App.GrayText"
                android:id="@+id/edtProfilePassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_4"
                android:hint="@string/what_s_your_password"
                android:textColorHint="@color/gray_light"
                android:textColor="@color/gray"
                android:textSize="@dimen/textSize_18" />
            <EditText
                android:theme="@style/Theme.App.GrayText"
                android:id="@+id/edtProfilePasswordCnf"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_4"
                android:hint="@string/confirm_pass"
                android:textColorHint="@color/gray_light"
                android:textColor="@color/gray"
                android:textSize="@dimen/textSize_18" />

        </LinearLayout>




    </LinearLayout>

</ScrollView>