<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="wrap_content"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_10"
        android:layout_width="match_parent"
        android:focusableInTouchMode="true"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_password"
            android:textStyle="bold"
            android:padding="4sp"
            android:textSize="@dimen/textSize_25"
            />

        <EditText
            android:id="@+id/edtPasswordReg"
            android:theme="@style/Theme.App.GrayText"
            android:textColor="@color/gray_dark_transparent"
            android:textColorHint="@color/gray_light"
            android:layout_marginBottom="@dimen/margin_10"
            android:minWidth="@dimen/carousel_height"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edtPasswordCnf"
            android:theme="@style/Theme.App.GrayText"
            android:textColor="@color/gray_dark_transparent"
            android:textColorHint="@color/gray_light"
            android:layout_marginBottom="@dimen/margin_10"
            android:minWidth="@dimen/carousel_height"
            android:layout_width="match_parent"
            android:hint="@string/confirm_pass"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_5"
            android:orientation="horizontal">
            <Button
                style="@style/KasperButton"
                android:theme="@style/KasperButton"
                android:text="@string/OK"
                android:layout_weight="1"
                android:id="@+id/btnOkayFolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>