<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:gravity="center"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtFolderName"
            android:theme="@style/Theme.App.GrayText"
            android:textColor="@color/gray_dark_transparent"
            android:textColorHint="@color/gray_light"
            android:layout_margin="@dimen/margin_10"
            android:minWidth="@dimen/card_school_height"
            android:layout_width="wrap_content"
            android:hint="@string/folder_name"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10"
            android:orientation="horizontal">
            <Button
                style="@style/KasperButton"
                android:theme="@style/KasperButton"
                android:text="@string/OK"
                android:layout_weight="1"
                android:id="@+id/btnOkayFolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                style="@style/KasperButton"
                android:theme="@style/KasperButton"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:id="@+id/btnCancelFolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>